--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # API Base URL
-VITE_API_URL=http://localhost:5173/api
+VITE_API_BASE_URL=http://localhost:5173/api
 
 # Static Data Base URL (정적 파일 경로)
 # 기본값은 현재 도메인을 사용합니다 (window.location.origin)
