--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-# VITE_API_BASE_URL=
+VITE_API_BASE_URL= https://api.sokdak.store
+
 VITE_USE_MOCK_DATA=true
+
+VITE_SKIP_AUTH=true
+
+VITE_TEST_SESSION_ID=
